--- a/src/main/webapp/html/ex01_basic.html
+++ b/src/main/webapp/html/ex01_basic.html
@@ -6,5 +6,15 @@
 </head>
 <body>
 <h1>hello world!</h1>
+<xmp>
+<a href = "https://namu.wiki/w/%EA%B9%80%EC%86%8C%EC%9B%94" target="_blank">김소월</a>
+
+</xmp>
+<p>
+<pre>
+	<a>기무라소월</a>
+	<a href = "https://namu.wiki/w/%EA%B9%80%EC%86%8C%EC%9B%94" target="_blank">김소월</a>
+</pre>
+</p>
 </body>
 </html>
