--- a/src/main/webapp/html/ex01_basic.html
+++ b/src/main/webapp/html/ex01_basic.html
@@ -12,9 +12,13 @@
 </xmp>
 <p>
 <pre>
-	<a>기무라소월</a>
+	<a>기무라소월</a><!--   html - 유연성 /  xml - 엄격함 -->
 	<a href = "https://namu.wiki/w/%EA%B9%80%EC%86%8C%EC%9B%94" target="_blank">김소월</a>
 </pre>
 </p>
+<!-- <a href="사이트 또는 페이지(자신이 만든것 포함)"> 링크문자 </a>
+  <a name="top"></a>
+	긴 내용이 있으면 됨....
+  <a href="#top">위로</a> -->
 </body>
 </html>
