--- a/src/main/webapp/html/ex03_table.html
+++ b/src/main/webapp/html/ex03_table.html
@@ -2,9 +2,27 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title></title>
+<title>tag - table, tr, td, th</title>
+
+<style type="text/css">
+	body { background-color: lightblue; }
+	.table {
+		border: 1px dotted black;
+		width: 650px;
+		height: 100px;
+		border-collapse: collapse;
+	}
+</style>
 </head>
 <body>
-
+	<table class="table" cellpadding="20" cellspacing="10">
+		<th>Title1</th><th>Title2</th>
+		<tr><td colspan="2">1</td rowspan="2"><td>2</td><td>3</td></tr>
+		<tr><td>4</td><td>5</td><td>6</td></tr>
+	</table>
+	<table border="3" width="500" height="20">
+		<tr><td>1</td><td>2</td><td>3</td></tr>
+		<tr><td>4</td><td>5</td><td>6</td></tr>
+	</table>
 </body>
 </html>
