--- a/src/main/webapp/html/ex03_table.html
+++ b/src/main/webapp/html/ex03_table.html
@@ -6,15 +6,18 @@
 
 <style type="text/css">
 	body { background-color: lightblue; }
-	.table {
+	.table, th, td {
 		border: 1px dotted black;
 		width: 650px;
 		height: 100px;
 		border-collapse: collapse;
+		text-align: center;
 	}
 </style>
 </head>
 <body>
+<a href="#bottom">하단</a>
+<a href="#middle">중간</a>
 	<table class="table" cellpadding="20" cellspacing="10">
 		<th>Title1</th><th>Title2</th>
 		<tr><td colspan="2">1</td rowspan="2"><td>2</td><td>3</td></tr>
@@ -24,5 +27,20 @@
 		<tr><td>1</td><td>2</td><td>3</td></tr>
 		<tr><td>4</td><td>5</td><td>6</td></tr>
 	</table>
+<a name="top"></a>
+식별자 개념 : 엔터티는 인스턴스들의 집합이라고 하였다. 
+여러 개의 집합체를 담고 있는 하나의 통에서 각각을 구분할 수 있는 논리적인 이름이 있어야 한다. 
+이 구분자를 식별자라고 한다. 식별자란 하나의 엔터티에 구성되어 있는 여러 개의 속성 중에 엔터티를 대표할 수 있는 속성을 
+의미하며 엔터티는 반드시 하나의 유일한 식별자가 존재해야 한다.
+→ 식별자와 키는 동일하지 않음, 키는 DB테이블에 접근을 위한 매개체로서 물리 데이터 모델링 단계에서 사용된다.
+
+<a name="middle"></a>
+식별자 개념 : 엔터티는 인스턴스들의 집합이라고 하였다. 
+여러 개의 집합체를 담고 있는 하나의 통에서 각각을 구분할 수 있는 논리적인 이름이 있어야 한다. 
+이 구분자를 식별자라고 한다. 식별자란 하나의 엔터티에 구성되어 있는 여러 개의 속성 중에 엔터티를 대표할 수 있는 속성을 
+의미하며 엔터티는 반드시 하나의 유일한 식별자가 존재해야 한다.
+→ 식별자와 키는 동일하지 않음, 키는 DB테이블에 접근을 위한 매개체로서 물리 데이터 모델링 단계에서 사용된다.
+
+<a name="bottom"></a>
 </body>
 </html>
