--- a/src/main/webapp/html/ex08_standard.html
+++ b/src/main/webapp/html/ex08_standard.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>ex07_none_standard</title>
+<title>ex08_standard</title>
 <style>
 	.accent {
 	font-size: 20px;
