--- a/src/main/webapp/html/ex11_css.html
+++ b/src/main/webapp/html/ex11_css.html
@@ -42,7 +42,11 @@
 
 </head>
 <body>
-
+	<form action="">
+		id: <input type ="text" name="id"><br/>
+		pwd : <input type="password" name="pass"><br />
+		<input type="submit" value="OK"><br />
+	</form>
    <nav class ="navi">
       <ul>
          <li><a href="#">애완견 종류</a></li>
