--- a/src/main/webapp/html/ex14_js.html
+++ b/src/main/webapp/html/ex14_js.html
@@ -9,10 +9,16 @@
 </style>
 
 <script type="text/javascript">
-	document.write("javascript를 이용한 출력")
+	document.write("javascript를 이용한 출력");
+	
+	function hello() {
+		alert("hello");
+	}
 </script>
 </head>
-<body>
-	<p>브라우저에서 출력된것입니다.</p>
+<body onload="javascript:alert('궁금해')">
+	
+	<p onclick="hello()">브라우저에서 출력된것입니다.</p>
+	
 </body>
 </html>
