--- a/src/main/webapp/html/ex18_js.html
+++ b/src/main/webapp/html/ex18_js.html
@@ -68,6 +68,15 @@
 </script>
 </head>
 <body>
+	<div class="box">
+		span tag 동적으로 3개 생성하고, 사자-1,2,3 이름 텍스트 추가하기
+	</div>
+
+	<ul>
+		<li>사과</li>
+		<li>사과2</li>
+		<li>사과3</li>
+	</ul>
 	<input type="text" id="monitor" /><br />
 	<input type="button" value="1" onclick="clickNumber(this.value)" />
 	<input type="button" value="2" onclick="clickNumber(this.value)" />
